Deleted lib and build directory
sqlite3 dependency added in build.gradle

Signed-off-by: Rajdeep Roy Chowdhury <rrajdeeproychowdhury@gmail.com>